Bug 489151 - Masking and clipping with objectBoundingBox and non-trivial transforms is broken. r=jwatt